--- a/Multivariable_Regression_and_Valuation_Model_(start).ipynb
+++ b/Multivariable_Regression_and_Valuation_Model_(start).ipynb
@@ -50,7 +50,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 31,
       "metadata": {
         "id": "o5G1mC4dCmcI"
       },
@@ -60,37 +60,53 @@
           "output_type": "stream",
           "text": [
             "Requirement already satisfied: plotly in ./.venv/lib/python3.10/site-packages (6.0.0)\n",
-            "Requirement already satisfied: pandas in ./.venv/lib/python3.10/site-packages (2.2.3)\n",
+            "Collecting plotly\n",
+            "  Downloading plotly-6.0.1-py3-none-any.whl (14.8 MB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m14.8/14.8 MB\u001b[0m \u001b[31m63.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+            "\u001b[?25hRequirement already satisfied: pandas in ./.venv/lib/python3.10/site-packages (2.2.3)\n",
             "Requirement already satisfied: numpy in ./.venv/lib/python3.10/site-packages (2.2.3)\n",
-            "Requirement already satisfied: seaborn in ./.venv/lib/python3.10/site-packages (0.13.2)\n",
+            "Collecting numpy\n",
+            "  Downloading numpy-2.2.4-cp310-cp310-macosx_11_0_arm64.whl (14.4 MB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m14.4/14.4 MB\u001b[0m \u001b[31m58.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+            "\u001b[?25hRequirement already satisfied: seaborn in ./.venv/lib/python3.10/site-packages (0.13.2)\n",
             "Requirement already satisfied: matplotlib in ./.venv/lib/python3.10/site-packages (3.10.1)\n",
             "Requirement already satisfied: nbformat in ./.venv/lib/python3.10/site-packages (5.10.4)\n",
             "Requirement already satisfied: scikit-learn in ./.venv/lib/python3.10/site-packages (1.6.1)\n",
-            "Requirement already satisfied: packaging in ./.venv/lib/python3.10/site-packages (from plotly) (24.2)\n",
             "Requirement already satisfied: narwhals>=1.15.1 in ./.venv/lib/python3.10/site-packages (from plotly) (1.30.0)\n",
-            "Requirement already satisfied: tzdata>=2022.7 in ./.venv/lib/python3.10/site-packages (from pandas) (2025.1)\n",
+            "Requirement already satisfied: packaging in ./.venv/lib/python3.10/site-packages (from plotly) (24.2)\n",
             "Requirement already satisfied: pytz>=2020.1 in ./.venv/lib/python3.10/site-packages (from pandas) (2025.1)\n",
+            "Requirement already satisfied: tzdata>=2022.7 in ./.venv/lib/python3.10/site-packages (from pandas) (2025.1)\n",
             "Requirement already satisfied: python-dateutil>=2.8.2 in ./.venv/lib/python3.10/site-packages (from pandas) (2.9.0.post0)\n",
-            "Requirement already satisfied: kiwisolver>=1.3.1 in ./.venv/lib/python3.10/site-packages (from matplotlib) (1.4.8)\n",
             "Requirement already satisfied: pillow>=8 in ./.venv/lib/python3.10/site-packages (from matplotlib) (11.1.0)\n",
-            "Requirement already satisfied: cycler>=0.10 in ./.venv/lib/python3.10/site-packages (from matplotlib) (0.12.1)\n",
             "Requirement already satisfied: fonttools>=4.22.0 in ./.venv/lib/python3.10/site-packages (from matplotlib) (4.56.0)\n",
-            "Requirement already satisfied: pyparsing>=2.3.1 in ./.venv/lib/python3.10/site-packages (from matplotlib) (3.2.1)\n",
+            "Requirement already satisfied: kiwisolver>=1.3.1 in ./.venv/lib/python3.10/site-packages (from matplotlib) (1.4.8)\n",
             "Requirement already satisfied: contourpy>=1.0.1 in ./.venv/lib/python3.10/site-packages (from matplotlib) (1.3.1)\n",
-            "Requirement already satisfied: jupyter-core!=5.0.*,>=4.12 in ./.venv/lib/python3.10/site-packages (from nbformat) (5.7.2)\n",
+            "Requirement already satisfied: pyparsing>=2.3.1 in ./.venv/lib/python3.10/site-packages (from matplotlib) (3.2.1)\n",
+            "Requirement already satisfied: cycler>=0.10 in ./.venv/lib/python3.10/site-packages (from matplotlib) (0.12.1)\n",
             "Requirement already satisfied: jsonschema>=2.6 in ./.venv/lib/python3.10/site-packages (from nbformat) (4.23.0)\n",
-            "Requirement already satisfied: fastjsonschema>=2.15 in ./.venv/lib/python3.10/site-packages (from nbformat) (2.21.1)\n",
             "Requirement already satisfied: traitlets>=5.1 in ./.venv/lib/python3.10/site-packages (from nbformat) (5.14.3)\n",
+            "Requirement already satisfied: jupyter-core!=5.0.*,>=4.12 in ./.venv/lib/python3.10/site-packages (from nbformat) (5.7.2)\n",
+            "Requirement already satisfied: fastjsonschema>=2.15 in ./.venv/lib/python3.10/site-packages (from nbformat) (2.21.1)\n",
             "Requirement already satisfied: scipy>=1.6.0 in ./.venv/lib/python3.10/site-packages (from scikit-learn) (1.15.2)\n",
             "Requirement already satisfied: joblib>=1.2.0 in ./.venv/lib/python3.10/site-packages (from scikit-learn) (1.4.2)\n",
             "Requirement already satisfied: threadpoolctl>=3.1.0 in ./.venv/lib/python3.10/site-packages (from scikit-learn) (3.5.0)\n",
-            "Requirement already satisfied: attrs>=22.2.0 in ./.venv/lib/python3.10/site-packages (from jsonschema>=2.6->nbformat) (25.3.0)\n",
             "Requirement already satisfied: rpds-py>=0.7.1 in ./.venv/lib/python3.10/site-packages (from jsonschema>=2.6->nbformat) (0.23.1)\n",
             "Requirement already satisfied: jsonschema-specifications>=2023.03.6 in ./.venv/lib/python3.10/site-packages (from jsonschema>=2.6->nbformat) (2024.10.1)\n",
             "Requirement already satisfied: referencing>=0.28.4 in ./.venv/lib/python3.10/site-packages (from jsonschema>=2.6->nbformat) (0.36.2)\n",
+            "Requirement already satisfied: attrs>=22.2.0 in ./.venv/lib/python3.10/site-packages (from jsonschema>=2.6->nbformat) (25.3.0)\n",
             "Requirement already satisfied: platformdirs>=2.5 in ./.venv/lib/python3.10/site-packages (from jupyter-core!=5.0.*,>=4.12->nbformat) (4.3.6)\n",
             "Requirement already satisfied: six>=1.5 in ./.venv/lib/python3.10/site-packages (from python-dateutil>=2.8.2->pandas) (1.17.0)\n",
             "Requirement already satisfied: typing-extensions>=4.4.0 in ./.venv/lib/python3.10/site-packages (from referencing>=0.28.4->jsonschema>=2.6->nbformat) (4.12.2)\n",
+            "Installing collected packages: plotly, numpy\n",
+            "  Attempting uninstall: plotly\n",
+            "    Found existing installation: plotly 6.0.0\n",
+            "    Uninstalling plotly-6.0.0:\n",
+            "      Successfully uninstalled plotly-6.0.0\n",
+            "  Attempting uninstall: numpy\n",
+            "    Found existing installation: numpy 2.2.3\n",
+            "    Uninstalling numpy-2.2.3:\n",
+            "      Successfully uninstalled numpy-2.2.3\n",
+            "Successfully installed numpy-2.2.4 plotly-6.0.1\n",
             "\u001b[33mWARNING: You are using pip version 22.0.4; however, version 25.0.1 is available.\n",
             "You should consider upgrading via the '/Users/jnibbs/PythonProject/Multivariable+Regression+(Start)/.venv/bin/python -m pip install --upgrade pip' command.\u001b[0m\u001b[33m\n",
             "\u001b[0mNote: you may need to restart the kernel to use updated packages.\n"
@@ -112,7 +128,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "id": "3iYmJ3Fb-d2i"
       },
@@ -142,7 +158,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {
         "id": "AUvdOhPIC4Me"
       },
@@ -164,7 +180,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "metadata": {
         "id": "GlG_B81bYakP"
       },
@@ -230,7 +246,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 4,
       "metadata": {
         "id": "whPNpmlF86sh"
       },
@@ -241,7 +257,7 @@
               "(506, 14)"
             ]
           },
-          "execution_count": 5,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -252,7 +268,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 5,
       "metadata": {
         "id": "2Dkhmpuy86pV"
       },
@@ -265,7 +281,7 @@
               "      dtype='object')"
             ]
           },
-          "execution_count": 6,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -285,9 +301,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 6,
       "metadata": {
         "id": "m6d8j8H289F0"
+      },
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "np.False_"
+            ]
+          },
+          "execution_count": 6,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "data.isna().any().all()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 7,
+      "metadata": {
+        "id": "_PjhwDz889IW"
       },
       "outputs": [
         {
@@ -302,34 +340,12 @@
         }
       ],
       "source": [
-        "data.isna().any().all()"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 8,
-      "metadata": {
-        "id": "_PjhwDz889IW"
-      },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "np.False_"
-            ]
-          },
-          "execution_count": 8,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
         "data.duplicated().all()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
@@ -475,7 +491,7 @@
               "4   5.33  36.20  "
             ]
           },
-          "execution_count": 9,
+          "execution_count": 8,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -503,7 +519,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 9,
       "metadata": {
         "id": "Qmf-vAdK8_he"
       },
@@ -562,7 +578,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 10,
       "metadata": {
         "id": "A85hcxas9BhW"
       },
@@ -570,10 +586,10 @@
         {
           "data": {
             "text/plain": [
-              "<seaborn.axisgrid.FacetGrid at 0x1058f7ac0>"
+              "<seaborn.axisgrid.FacetGrid at 0x103ca5d20>"
             ]
           },
-          "execution_count": 11,
+          "execution_count": 10,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -604,7 +620,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 11,
       "metadata": {
         "id": "U38tDs119DBe"
       },
@@ -612,10 +628,10 @@
         {
           "data": {
             "text/plain": [
-              "<seaborn.axisgrid.FacetGrid at 0x15419e2c0>"
+              "<seaborn.axisgrid.FacetGrid at 0x103ca5660>"
             ]
           },
-          "execution_count": 12,
+          "execution_count": 11,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -645,7 +661,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 12,
       "metadata": {
         "id": "vfmHNdzL9Ef-"
       },
@@ -653,10 +669,10 @@
         {
           "data": {
             "text/plain": [
-              "<seaborn.axisgrid.FacetGrid at 0x15450fb80>"
+              "<seaborn.axisgrid.FacetGrid at 0x2849b3130>"
             ]
           },
-          "execution_count": 13,
+          "execution_count": 12,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -686,7 +702,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 13,
       "metadata": {
         "id": "zKpT7wD39HGU"
       },
@@ -694,10 +710,10 @@
         {
           "data": {
             "text/plain": [
-              "<seaborn.axisgrid.FacetGrid at 0x1566b8b50>"
+              "<seaborn.axisgrid.FacetGrid at 0x284a7a800>"
             ]
           },
-          "execution_count": 14,
+          "execution_count": 13,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -735,7 +751,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 14,
       "metadata": {
         "id": "2244H8hx9NV_"
       },
@@ -746,7 +762,7 @@
               "<BarContainer object of 2 artists>"
             ]
           },
-          "execution_count": 15,
+          "execution_count": 14,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -813,7 +829,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 15,
       "metadata": {
         "id": "nmtQZb_79RQA"
       },
@@ -821,10 +837,10 @@
         {
           "data": {
             "text/plain": [
-              "<seaborn.axisgrid.PairGrid at 0x15669cdf0>"
+              "<seaborn.axisgrid.PairGrid at 0x282985690>"
             ]
           },
-          "execution_count": 16,
+          "execution_count": 15,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -886,7 +902,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 16,
       "metadata": {
         "id": "dToSDGBU9ThU"
       },
@@ -929,7 +945,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 17,
       "metadata": {
         "id": "Pvmo-IDC9VaM"
       },
@@ -973,7 +989,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 18,
       "metadata": {
         "id": "bP9nLYo69W3E"
       },
@@ -1015,7 +1031,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 19,
       "metadata": {
         "id": "qzDPv2mA9ZLS"
       },
@@ -1057,7 +1073,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 20,
       "metadata": {
         "id": "OKiSjKor9a7l"
       },
@@ -1110,7 +1126,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 21,
       "metadata": {
         "id": "e9o1cpLr9dKl"
       },
@@ -1127,7 +1143,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 22,
       "metadata": {
         "id": "0kfcVnfy9ffj"
       },
@@ -1179,7 +1195,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 23,
       "metadata": {
         "id": "-H1x3WmG9guW"
       },
@@ -1219,7 +1235,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 24,
       "metadata": {
         "id": "VUV-Vp1Y9jVA"
       },
@@ -1322,7 +1338,7 @@
               "LSTAT          -0.58"
             ]
           },
-          "execution_count": 42,
+          "execution_count": 24,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1364,7 +1380,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": 25,
       "metadata": {
         "id": "7nEqMTRn9owC"
       },
@@ -1398,7 +1414,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": 26,
       "metadata": {},
       "outputs": [
         {
@@ -1448,12 +1464,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 44,
       "metadata": {
         "id": "sXmE_Sn49tGl"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "np.float64(-1.802738376619066e-15)"
+            ]
+          },
+          "execution_count": 44,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "residual.mean()"
+      ]
     },
     {
       "cell_type": "code",
@@ -1534,7 +1563,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 27,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1751,7 +1780,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 28,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1826,7 +1855,7 @@
               "0  12.65  "
             ]
           },
-          "execution_count": 21,
+          "execution_count": 28,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1882,7 +1911,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 29,
       "metadata": {
         "id": "Qfv1eqvmAjML"
       },
@@ -1899,7 +1928,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 30,
       "metadata": {
         "id": "VjMZyxl--joy"
       },
